--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,21 +9,25 @@ body,
 }
 
 :root {
-  --rowColor-red: #ff7f7f;
-  --rowColor-orange: #ffbf7f;
-  --rowColor-light-orange: #ffb366;
-  --rowColor-yellow: #ffff7f;
-  --rowColor-lime-green: #bfff7f;
-  --rowColor-green: #7fff7f;
-  --rowColor-turquoise: #7fffff;
-  --rowColor-light-blue: #7fbfff;
-  --rowColor-blue: #7f7fff;
-  --rowColor-magenta: #ff7fff;
-  --rowColor-purple: #bf7fbf;
-  --rowColor-black: #3b3b3b;
-  --rowColor-gray: #858585;
-  --rowColor-silver: #cfcfcf;
-  --rowColor-white: #f7f7f7;
+  --rowColor-red: #ff6f6f;
+  --rowColor-orange: #ff9970;
+  --rowColor-light-orange: #ffbd70;
+  --rowColor-yellow: #ffd870;
+  --rowColor-lime-green: #c5ff70;
+  --rowColor-green: #70ff94;
+  --rowColor-turquoise: #70ffd9;
+  --rowColor-light-blue: #70d9ff;
+  --rowColor-blue: #7094ff;
+  --rowColor-magenta: #c570ff;
+  --rowColor-purple: #ff70bb;
+  --rowColor-black: #404040;
+  --rowColor-gray: #808080;
+  --rowColor-silver: #b0b0b0;
+  --rowColor-white: #e8e8e8;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
 }
 
 ::-webkit-scrollbar {
@@ -35,5 +39,5 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-slate-600 rounded-xl;
+  @apply bg-content4 rounded-xl;
 }
