--- a/src/styles/anim-vertical-words.scss
+++ b/src/styles/anim-vertical-words.scss
@@ -13,7 +13,7 @@
       @apply p-0.5 flex relative w-full h-full;
 
       div {
-        @apply h-full flex items-center justify-center px-2 w-full;
+        @apply h-full flex items-center justify-center px-2 w-full text-content1;
       }
     }
   }
