feat: after sign in redirect url, auth page titles

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -91,6 +91,11 @@ body::-webkit-scrollbar {
   }
 }
 
+// Bottom privacy choices
+.iub__us-widget {
+  @apply bg-content1;
+}
+
 @media (max-width: 640px) {
   :root {
     --page-top-space: 1.5rem;
