feat: mobile sticky storage & better list redux selectors

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -73,6 +73,10 @@ body::-webkit-scrollbar {
   }
 }
 
+.content {
+  @apply overflow-hidden items-center select-none touch-none flex-shrink-0 flex text-left cursor-grab relative;
+}
+
 .terms-container {
   p {
     @apply mb-3;
