fix: image create utils fix after previous changes

--- a/src/styles/list-thumbnail-create.scss
+++ b/src/styles/list-thumbnail-create.scss
@@ -8,7 +8,8 @@
   //gap: 1px;
   //border: 1px solid black;
 
-  & > div {
+  & > div,
+  .content {
     position: relative;
     width: 100%;
     height: 100%;
