--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,11 +4,16 @@
 
 html {
   height: 100%;
+  font-size: 16px;
 }
 
 html,
 body {
   @apply bg-background text-foreground-700;
+}
+
+body {
+  @apply antialiased;
 }
 
 body,
