--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -101,6 +101,10 @@ body::-webkit-scrollbar {
   .pb-safe {
     padding-bottom: env(safe-area-inset-bottom);
   }
+
+  .wordb-break-word {
+    word-break: break-word;
+  }
 }
 
 // Bottom privacy choices
