--- a/src/styles/list-thumbnail-create.scss
+++ b/src/styles/list-thumbnail-create.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(6, 100px);
-  grid-template-rows: repeat(4, 150px);
+  grid-template-rows: repeat(6, 100px);
   justify-content: center;
   overflow: hidden;
   //gap: 1px;
@@ -23,7 +23,7 @@
       &:nth-child(2) {
         display: flex;
         grid-column: span 3;
-        grid-row: span 4;
+        grid-row: span 6;
         overflow: hidden;
       }
     }
@@ -35,7 +35,7 @@
       &:nth-child(-n + 3) {
         display: flex;
         grid-column: span 2;
-        grid-row: span 4;
+        grid-row: span 6;
       }
     }
   }
@@ -46,7 +46,7 @@
       &:nth-child(-n + 4) {
         display: flex;
         grid-column: span 3;
-        grid-row: span 2;
+        grid-row: span 3;
       }
     }
   }
@@ -60,42 +60,52 @@
       &:nth-child(5) {
         display: flex;
         grid-column: span 2;
-        grid-row: span 2;
+        grid-row: span 3;
       }
 
       &:nth-child(3) {
         display: flex;
         grid-column: span 2;
-        grid-row: span 4;
+        grid-row: span 6;
       }
     }
   }
 
   &_grid-6 {
     & > div {
-      grid-column: span 2;
-      grid-row: span 2;
+      display: none;
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6) {
+        display: flex;
+        grid-column: span 2;
+        grid-row: span 3;
+      }
     }
   }
 
   &_grid-7 {
     & > div {
       display: none;
-      &:nth-child(1),
-      &:nth-child(2),
+
       &:nth-child(3),
-      &:nth-child(5),
-      &:nth-child(6) {
+      &:nth-child(4),
+      &:nth-child(7) {
         display: flex;
         grid-column: span 2;
         grid-row: span 2;
       }
 
-      &:nth-child(4),
-      &:nth-child(7) {
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(5),
+      &:nth-child(6) {
         display: flex;
-        grid-column: span 1;
-        grid-row: span 2;
+        grid-column: span 2;
+        grid-row: span 3;
       }
     }
   }
@@ -106,19 +116,19 @@
       &:nth-child(1),
       &:nth-child(2),
       &:nth-child(3),
-      &:nth-child(4) {
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(7),
+      &:nth-child(8) {
         display: flex;
         grid-column: span 2;
         grid-row: span 2;
       }
 
-      &:nth-child(5),
-      &:nth-child(6),
-      &:nth-child(7),
-      &:nth-child(8) {
+      &:nth-child(6) {
         display: flex;
-        grid-column: span 1;
-        grid-row: span 2;
+        grid-column: span 2;
+        grid-row: span 4;
       }
     }
   }
@@ -126,14 +136,19 @@
   &_grid-9 {
     & > div {
       display: none;
-      &:nth-child(-n + 5) {
+
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7),
+      &:nth-child(8),
+      &:nth-child(9) {
         display: flex;
         grid-column: span 2;
         grid-row: span 2;
-      }
-
-      &:nth-child(n + 6):not(:nth-child(n + 10)) {
-        display: flex;
       }
     }
   }
@@ -141,21 +156,24 @@
   &_grid-10 {
     & > div {
       display: none;
-      &:nth-child(-n + 4) {
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7),
+      &:nth-child(8) {
         display: flex;
         grid-column: span 2;
         grid-row: span 2;
       }
 
-      &:nth-child(5),
-      &:nth-child(6) {
+      &:nth-child(9),
+      &:nth-child(10) {
         display: flex;
         grid-column: span 1;
         grid-row: span 2;
-      }
-
-      &:nth-child(n + 7):not(:nth-child(n + 11)) {
-        display: flex;
       }
     }
   }
@@ -166,23 +184,24 @@
       &:nth-child(1),
       &:nth-child(2),
       &:nth-child(3),
-      &:nth-child(4) {
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7),
+      &:nth-child(8) {
         display: flex;
         grid-column: span 2;
         grid-row: span 2;
       }
 
-      &:nth-child(4),
-      &:nth-child(5),
-      &:nth-child(6),
-      &:nth-child(7) {
+      &:nth-child(9),
+      &:nth-child(11) {
         display: flex;
-        grid-column: span 1;
-        grid-row: span 2;
       }
 
-      &:nth-child(n + 7):not(:nth-child(n + 12)) {
+      &:nth-child(10) {
         display: flex;
+        grid-row: span 2;
       }
     }
   }
@@ -190,21 +209,22 @@
   &_grid-12 {
     & > div {
       display: none;
-      &:nth-child(1),
-      &:nth-child(3),
-      &:nth-child(8),
-      &:nth-child(10) {
-        grid-column: span 2;
-        grid-row: span 2;
-        display: flex;
-      }
 
+      &:nth-child(1),
       &:nth-child(2),
+      &:nth-child(3),
       &:nth-child(4),
       &:nth-child(5),
       &:nth-child(6),
       &:nth-child(7),
+      &:nth-child(8) {
+        display: flex;
+        grid-column: span 2;
+        grid-row: span 2;
+      }
+
       &:nth-child(9),
+      &:nth-child(10),
       &:nth-child(11),
       &:nth-child(12) {
         display: flex;
