--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,8 @@ html {
 html,
 body {
   @apply bg-background text-foreground-700;
+  scrollbar-color: hsl(var(--nextui-content4)) transparent;
+  scrollbar-width: thin;
 }
 
 body,
@@ -48,24 +50,6 @@ body main {
   --rowColor-gray: #808080;
   --rowColor-silver: #b0b0b0;
   --rowColor-white: #e8e8e8;
-}
-
-body::-webkit-scrollbar {
-  width: 8px;
-  @apply bg-content1/70 p-2;
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-  @apply p-2;
-}
-
-::-webkit-scrollbar:horizontal {
-  height: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  @apply bg-content4 rounded-xl;
 }
 
 .hide-scrollbar {
